@@ -77,58 +77,74 @@ PHASE(Using)
 
 - (void)catDouble: (double)dbl
 {
-  char buf[DSIZE(double) + 1];
+  char buf[DSIZE (double) + 1];
   sprintf (buf, "%fD0", dbl);
   [self catC: buf];
 }
 
 - (void)catFloat: (float)flt
 {
-  char buf[DSIZE(float) + 1];
+  char buf[DSIZE (float) + 1];
   sprintf (buf, "%fF0", flt);
   [self catC: buf];
 }
 
 - (void)catInt: (int)i
 {
-  char buf[DSIZE(int) + 1];
+  char buf[DSIZE (int) + 1];
   sprintf (buf, "%d", i);
   [self catC: buf];
 }
 
 - (void)catUnsigned: (unsigned)un
 {
-  char buf[DSIZE(unsigned) + 1];
+  char buf[DSIZE (unsigned) + 1];
   sprintf (buf, "%u", un);
   [self catC: buf];
 }
 
 - (void)catShort: (short)sht
 {
-  char buf[DSIZE(short) + 1];
+  char buf[DSIZE (short) + 1];
   sprintf (buf, "%hd", sht);
   [self catC: buf];
 }
 
 - (void)catUnsignedShort: (unsigned short)usht
 {
-  char buf[DSIZE(unsigned short) + 1];
+  char buf[DSIZE (unsigned short) + 1];
   sprintf (buf, "%hu", usht);
   [self catC: buf];
 }
 
 - (void)catLong: (long)lng
 {
-  char buf[DSIZE(long) + 1];
+  char buf[DSIZE (long) + 1];
   sprintf (buf, "%ld", lng);
   [self catC: buf];
 }
 
 - (void)catUnsignedLong: (unsigned long)ulng
 {
-  char buf[DSIZE(unsigned long) + 1];
+  char buf[DSIZE (unsigned long) + 1];
   sprintf (buf, "%ld", ulng);
   [self catC: buf];
+}
+
+- (void)catLongLong: (long long)lnglng
+{
+  char buf[DSIZE (long long) + 1];
+
+  sprintf (buf, "%lld", lnglng);
+  [stream catC: buf];
+}
+
+- (void)catUnsignedLongLong: (unsigned long long)ulnglng
+{
+  char buf[DSIZE (unsigned long long) + 1];
+
+  sprintf (buf, "%llu", ulnglng);
+  [stream catC: buf];
 }
 
 @end
